# nddPluginToys

./: CMakeLists.txt  CMakeLists.txt_bak  README.md  nddPluginToys.pro  nddPluginToys.rar  nddPluginToys.vcxproj  nddPluginToys.vcxproj.filters  nddPluginToys_mirror.sln  openccTranse.cpp  openccTranse.h  qttoysclass.cpp  qttoysclass.h  qttoysclass.ui
src/: openccTranse.h  qttoysclass.cpp  qttoysclass.h  toysexport.cpp  ui_qttoysclass.h
ui/: qttestclass.ui_bak  qttoysclass.ui
vs2019_sln/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  nddPluginToys.sln  nddPluginToys.vcxproj  nddPluginToys.vcxproj.filters
vs2019_sln/nddPluginToys_autogen/: mocs_compilation_Debug.cpp
vs2019_sln/nddPluginToys_autogen/include_Debug/: ui_qttoysclass.h
vs2019_sln/nddPluginToys_autogen/include_Debug/UVLADIE3JM/: moc_qttoysclass.cpp  moc_qttoysclass.cpp.d
vs2019_sln/nddPluginToys_autogen/include_Release/: ui_qttoysclass.h
vs2019_sln/nddPluginToys_autogen/include_Release/UVLADIE3JM/: moc_qttoysclass.cpp  moc_qttoysclass.cpp.d
